Fix footer watermark z-index

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -502,6 +502,7 @@ a {
         position: absolute;
         left: 50%;
         transform: translateX(-50%);
+        z-index: -1;
     }
     &__fineprint {
         text-align: right;
